--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/uuid": "^10.0.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.0",
     "googleapis": "^157.0.0",
     "lucide-react": "^0.400.0",
     "next": "14.2.0",
+    "openai": "^5.16.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "tailwind-merge": "^2.2.0"
+    "tailwind-merge": "^2.2.0",
+    "uuid": "^11.1.0",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/node": "^20",
