--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:init": "node scripts/init-db.js",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@prisma/client": "^6.14.0",
     "@types/uuid": "^10.0.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.0",
@@ -16,6 +21,7 @@
     "lucide-react": "^0.400.0",
     "next": "14.2.0",
     "openai": "^5.16.0",
+    "prisma": "^6.14.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "tailwind-merge": "^2.2.0",
