--- a/demo-generator/package.json
+++ b/demo-generator/package.json
@@ -18,11 +18,13 @@
     "@sendgrid/mail": "^7.0.0",
     "googleapis": "^128.0.0",
     "express-rate-limit": "^7.0.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/express": "^4.17.0",
+    "@types/cors": "^2.8.17",
     "typescript": "^5.0.0",
     "ts-node-dev": "^2.0.0",
     "jest": "^29.0.0",
