--- a/demo-generator/package.json
+++ b/demo-generator/package.json
@@ -4,31 +4,31 @@
   "description": "AI-powered demo content generator",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "puppeteer": "^21.0.0",
-    "openai": "^4.0.0",
-    "@supabase/supabase-js": "^2.0.0",
-    "express": "^4.18.0",
     "@sendgrid/mail": "^7.0.0",
-    "googleapis": "^128.0.0",
-    "express-rate-limit": "^7.0.0",
+    "@supabase/supabase-js": "^2.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "cors": "^2.8.5"
+    "express": "^4.18.0",
+    "express-rate-limit": "^7.0.0",
+    "googleapis": "^128.0.0",
+    "openai": "^4.0.0",
+    "puppeteer": "^21.0.0"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.0",
-    "@types/cors": "^2.8.17",
-    "typescript": "^5.0.0",
-    "ts-node-dev": "^2.0.0",
-    "jest": "^29.0.0",
     "@types/jest": "^29.0.0",
-    "ts-jest": "^29.0.0"
+    "@types/node": "^20.0.0",
+    "jest": "^29.0.0",
+    "ts-jest": "^29.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.0"
   }
 }
