✅ [Step 5.3] Add test mode configuration

--- a/demo-generator/.env.example
+++ b/demo-generator/.env.example
@@ -18,3 +18,9 @@ NODE_ENV=development
 
 # Security
 WEBHOOK_SECRET=
+
+# Test/Demo Mode (Set to true for testing without API keys)
+DEMO_MODE=false
+MOCK_GRAPHICS=false
+DISABLE_EMAIL=false
+SENDGRID_FROM_EMAIL=demo@yourdomain.com
