--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --ci --coverage --maxWorkers=2",
     "db:init": "node scripts/init-db.js",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
@@ -30,14 +34,20 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.0",
+    "ts-jest": "^29.4.1",
     "typescript": "^5"
   }
 }
